Fix padding for accordion on hover on mobiles

--- a/tuning/media.css
+++ b/tuning/media.css
@@ -225,7 +225,7 @@
 
 	/* FAQ */
 	button.accordion {
-		padding: 15px 30px 10px 10px;
+		padding: 13px 30px 10px 10px;
 		font-size: 16px;
 		line-height: 24px;
 	}
